@@ -50,7 +50,6 @@
             "CPAN::Meta" : "2.120900"
          },
          "requires" : {
-            "Data::Dumper" : "0",
             "ExtUtils::MakeMaker" : "0",
             "File::Spec" : "0",
             "Module::Signature" : "0",
@@ -63,7 +62,7 @@
    "provides" : {
       "Crypt::PKCS10" : {
          "file" : "lib/Crypt/PKCS10.pm",
-         "version" : "1.6"
+         "version" : "1.601"
       }
    },
    "release_status" : "stable",
@@ -78,7 +77,7 @@
          "web" : "https://github.com/gknocke/Crypt-PKCS10"
       }
    },
-   "version" : "1.6",
+   "version" : "1.601",
    "x_Dist_Zilla" : {
       "perl" : {
          "version" : "5.008008"
