@@ -28,14 +28,13 @@ my %WriteMakefileArgs = (
     "warnings" => 0
   },
   "TEST_REQUIRES" => {
-    "Data::Dumper" => 0,
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
     "Module::Signature" => 0,
     "Socket" => 0,
     "Test::More" => "0.94"
   },
-  "VERSION" => "1.6",
+  "VERSION" => "1.601",
   "test" => {
     "TESTS" => "t/*.t"
   }
@@ -45,7 +44,6 @@ my %WriteMakefileArgs = (
 my %FallbackPrereqs = (
   "Carp" => 0,
   "Convert::ASN1" => "0.27",
-  "Data::Dumper" => 0,
   "Encode" => 0,
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
