@@ -20,7 +20,7 @@
 use strict;
 use warnings;
 
-use Test::More 0.94 tests => 8;
+use Test::More 0.94 tests => 9;
 
 use File::Spec;
 
@@ -31,7 +31,7 @@ my @dirpath = (File::Spec->splitpath( $0 ))[0,1];
 my $decoded;
 
 subtest 'Basic functions' => sub {
-    plan tests => 22;
+    plan tests => 23;
 
     BEGIN {
 	use_ok('Crypt::PKCS10') or BAIL_OUT( "Can't load Crypt::PKCS10" );
@@ -106,6 +106,13 @@ ceQQb6bmyxy+bka5Sr7WLxG95LLPss8zBVhlTn8nzMgrKHCFF6MzajapMItWg8vz3MpJLNVjrjp0
 ZSijbwIDAQAB
 -----END PUBLIC KEY-----
 _KEYPEM_
+
+    is_deeply( $decoded->subjectPublicKeyParams,
+               {keytype => 'RSA',
+                keylen => 2048,
+                modulus => 'e0484c12ee29a56fb72d2829fdf286859b049a007d9030126bdd1e9d2319be38b4a40b00416dc54b000340ba580bb1c511e251e1a781ec2139c52d41e16226f607d1c4b3027a4a951eadc88e90b100de568f267902c694399d1392b27b7a7f31d84795e51d6833ee46132bfc049f9f962cc6f50e511f1a56227d47d7e3d60f8756d914a8fcf5440a67e571e4106fa6e6cb1cbe6e46b94abed62f11bde4b2cfb2cf330558654e7f27ccc82b28708517a3336a36a9308b5683cbf3dcca492cd563ae3a74d2d337424a644771cce8704dc47e67ecff2389587a57e3a2197813114a58cecd260071bf03c97aa4b2d0bf0e1f51310202bc7dee79ba9e884a6528a36f',
+                publicExponent => '10001',
+               }, 'subjectPublicKeyParams' );
 
     is( $decoded->signature, 'dc8ba14eade00b952cdaacf0f48986407f01802b3d2c626c0cea42f977a39c3dbb5' .
 	'8db01c1897fb72a3d46c811269e446c4c208f63030694216f84ecca99163a60587e5bdf14075728e49e9b5e3' .
@@ -523,6 +530,30 @@ subtest 'stringify object' => sub {
       diag( sprintf( "actual length %u, value:\n%s\n", length $string, $string ) );
 
     like( $string, qr{^Subject\s*:[ ]/O=TestOrg/CN=TestCN\n}msx, 'string includes subject' );
+};
+
+subtest 'DSA requests' => sub {
+    plan tests => 3;
+
+    my $file = File::Spec->catpath( @dirpath, 'csr5.pem' );
+
+    if( open( my $csr, '<', $file ) ) {
+	$decoded = Crypt::PKCS10->new( $csr, escapeStrings => 1 );
+    } else {
+	BAIL_OUT( "$file: $!\n" );;
+    }
+
+    isnt( $decoded, undef, 'load PEM from file handle' ) or BAIL_OUT( Crypt::PKCS10->error );
+
+    is( $decoded->signatureAlgorithm, 'dsaWithSha256', 'DSA signature' );
+
+    is_deeply( $decoded->subjectPublicKeyParams,
+               {keytype => 'DSA',
+                keylen => 1024,
+                Q => 'b2a130635bfe19dbb3e49d8f5c4bae8266126019',
+                P => 'eb3ac7a7928f0a2ab9ef61288cfde11c13e932d3853803daeb2559e8a91abc9dc48577195a471026ef27741f24e60d93a42506f16cd8bd5aebdbf519b5baa3e6470484c3c3790ffc9b5617fbd38545cd07ff60da7846383c848f0ab447ac7ed5dcd35132d882e03269f3694330d41292d92e4472429ffa0e2514ec35ea96ee2d',
+                G => 'd2a82fb32f303aab7c554c91096d233cd3e87b2c9e202172a5206c7a228a39195504fcf6266748ea1a212cef6b9632bdc2012a766875c93334f7dacc24fef6ed11c185af502b236637bfdb3f8fab1de2b4bc26b45d5bb6171b8c169eca77977b5b4b9c9ca7df4052c7717bd885db9436d09829659e886de35173da53a16b78d7',
+               }, 'subjectPublicKeyParams' );
 };
 
     # registerOID test needed
